<resources>
    <string name="app_name">About Me</string>
    <string name="name">Alexander Skornyakov</string>
    <string name="yellow_star">Yellow_star</string>
    <string name="bio">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo vel orci porta non pulvinar neque. Quam vulputate dignissim suspendisse in est ante in nibh. Sed cras ornare arcu dui vivamus. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Et netus et malesuada fames ac turpis. Rhoncus urna neque viverra justo nec. Semper feugiat nibh sed pulvinar. Sodales ut eu sem integer vitae justo eget. Urna et pharetra pharetra massa massa. Tellus id interdum velit laoreet id donec ultrices tincidunt. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim. Mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Gravida neque convallis a cras semper. Lacus laoreet non curabitur gravida arcu. Sed turpis tincidunt id aliquet risus feugiat in. Duis at tellus at urna.

        Vitae turpis massa sed elementum tempus egestas sed sed. Et netus et malesuada fames ac turpis egestas maecenas. Lectus magna fringilla urna porttitor rhoncus. Ultrices tincidunt arcu non sodales neque. Sociis natoque penatibus et magnis. Sit amet consectetur adipiscing elit pellentesque. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Eget aliquet nibh praesent tristique magna sit amet. Curabitur gravida arcu ac tortor dignissim convallis aenean et. Nisi est sit amet facilisis magna. Blandit volutpat maecenas volutpat blandit aliquam etiam erat. Ante in nibh mauris cursus mattis molestie a iaculis at. Non arcu risus quis varius quam. Cras adipiscing enim eu turpis. Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Metus aliquam eleifend mi in nulla. Elementum facilisis leo vel fringilla est. Ac turpis egestas sed tempus. Eu mi bibendum neque egestas congue. Dolor sed viverra ipsum nunc aliquet.

        Molestie at elementum eu facilisis. Faucibus a pellentesque sit amet porttitor eget dolor. Gravida cum sociis natoque penatibus et magnis. Sit amet justo donec enim diam vulputate. Mi bibendum neque egestas congue. Consequat nisl vel pretium lectus quam. Et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Amet luctus venenatis lectus magna fringilla urna porttitor. Bibendum est ultricies integer quis auctor elit sed. Aliquam purus sit amet luctus venenatis lectus. Ridiculus mus mauris vitae ultricies leo integer malesuada. Est velit egestas dui id ornare arcu odio. Egestas sed tempus urna et pharetra pharetra. Magnis dis parturient montes nascetur ridiculus mus. Amet risus nullam eget felis eget nunc lobortis mattis aliquam.

        Bibendum neque egestas congue quisque egestas diam in. Mattis rhoncus urna neque viverra justo nec ultrices. Ipsum faucibus vitae aliquet nec ullamcorper sit amet. Commodo nulla facilisi nullam vehicula ipsum. Amet consectetur adipiscing elit pellentesque habitant morbi tristique. Molestie nunc non blandit massa enim nec dui. Arcu cursus euismod quis viverra nibh cras pulvinar mattis. Fermentum leo vel orci porta non pulvinar neque. Augue lacus viverra vitae congue eu consequat. In vitae turpis massa sed elementum tempus. Metus dictum at tempor commodo ullamcorper a lacus. Velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Est ultricies integer quis auctor elit sed vulputate. Nam aliquam sem et tortor consequat id porta nibh venenatis. Sed adipiscing diam donec adipiscing. Elementum nisi quis eleifend quam adipiscing vitae proin. Sed odio morbi quis commodo odio aenean sed.

        Aliquet eget sit amet tellus cras. Imperdiet massa tincidunt nunc pulvinar. Ac auctor augue mauris augue. Sagittis orci a scelerisque purus semper eget duis. Pharetra et ultrices neque ornare aenean euismod elementum. Nisi scelerisque eu ultrices vitae auctor. Odio aenean sed adipiscing diam donec adipiscing. Sit amet facilisis magna etiam tempor orci eu lobortis. Venenatis a condimentum vitae sapien. Nascetur ridiculus mus mauris vitae ultricies. Aliquam sem fringilla ut morbi. A erat nam at lectus urna duis convallis convallis tellus. Id leo in vitae turpis massa. Egestas integer eget aliquet nibh praesent. Iaculis nunc sed augue lacus viverra vitae congue. Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis.
    </string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done_button">Done</string>
</resources>
